Peg smaller font size to rem

--- a/src/server/static/css/_general.css
+++ b/src/server/static/css/_general.css
@@ -4,7 +4,7 @@
   --link-colour: rgb(0, 0, 139);
   --border-colour: #999;
   --margin-size: 40px;
-  --smaller-font-size: 0.85em;
+  --smaller-font-size: 0.85rem;
   --main-colour: rgb(242, 232, 222);
 }
 
