Don't wrap cron cell

--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -420,6 +420,7 @@
 
                 const cronCell = document.createElement("td");
                 cronCell.textContent = cron;
+                cronCell.classList.add('nowrap');
 
                 const dateCell = document.createElement("td");
                 dateCell.textContent = date;
