renamed ElectionAnnouncement 'dateElection' to 'dateNomination' to clarify the intent (#191)

--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -101,7 +101,7 @@
                     <tr>
                         <th>Type</th>
                         <th>Announced On</th>
-                        <th>Election Date</th>
+                        <th>Nomination Date</th>
                         <th>Author</th>
                         <th>Title</th>
                     </tr>
@@ -111,7 +111,7 @@
                     <tr>
                         <td>{{type}}</td>
                         <td>{{utcTimestamp dateAnnounced}}</td>
-                        <td>{{utcTimestamp dateElection}}</td>
+                        <td>{{utcTimestamp dateNomination}}</td>
                         <td>{{{url userLink userName}}}</td>
                         <td>{{{url postLink postTitle}}}</td>
                     </tr>
