--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -393,7 +393,10 @@
 {{/with}}
 
 <base target="_blank" />
-<meta http-equiv="refresh" content="{{data/autoRefreshInterval}}" />
+
+<noscript>
+    <meta http-equiv="refresh" content="{{data/autoRefreshInterval}}" />
+</noscript>
 
 <script>
     (() => {
@@ -448,6 +451,19 @@
         qtyRealtime.addEventListener("error", (event) => {
             console.debug(event);
             qtyRealtime.close();
+        });
+
+        const refreshRealtime = new EventSource(`${location.origin}/realtime?type=refresh`);
+        refreshRealtime.addEventListener("message", () => {
+            schRealtime.close();
+            qtyRealtime.close();
+            refreshRealtime.close();
+            location.reload();
+        });
+
+        refreshRealtime.addEventListener("error", (event) => {
+            console.debug(event);
+            refreshRealtime.close();
         });
     })();
 </script>
