--- a/src/server/views/layouts/main.handlebars
+++ b/src/server/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <title>{{page/appName}} | {{page/title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/app.css" />
 </head>
 
 <body>
