--- a/src/server/static/css/components/_tables.scss
+++ b/src/server/static/css/components/_tables.scss
@@ -2,23 +2,35 @@ table {
   min-width: 280px;
   width: 100%;
   margin: 2em 0;
+  padding: 6px 10px;
+  border: 1px solid var(--border-colour);
+  border-collapse: collapse;
 }
 
 h2 + table {
   margin-top: 0;
 }
 
-table,
-th,
-td {
-  padding: 6px 10px;
-  border: 1px solid var(--border-colour);
-  border-collapse: collapse;
-}
-
 th,
 td {
   vertical-align: top;
+  padding: 6px 10px;
+  border: 1px solid var(--border-colour);
+  border-collapse: collapse;
+
+  &:first-child {
+    white-space: nowrap;
+  }
+
+  &:last-child {
+    min-width: 200px;
+    width: 80%;
+  }
+
+  .list {
+    margin: 0;
+    font-size: var(--smaller-font-size);
+  }
 }
 
 th {
@@ -26,36 +38,19 @@ th {
   white-space: nowrap;
 }
 
-th:first-child,
-td:first-child {
-  white-space: nowrap;
-}
-
-th:last-child,
-td:last-child {
-  min-width: 200px;
-  width: 80%;
-}
-
-td .list {
-  margin: 0;
-  font-size: var(--smaller-font-size);
-}
-
 /* Smaller tables */
 .table-small {
   font-size: var(--smaller-font-size);
-}
 
-.table-small th,
-.table-small td {
-  min-width: 0;
-  padding: 3px 8px;
-}
+  th,
+  td {
+    min-width: 0;
+    padding: 3px 8px;
 
-.table-small th:first-child,
-.table-small td:first-child {
-  white-space: nowrap;
+    &:first-child {
+      white-space: nowrap;
+    }
+  }
 }
 
 /* Nested tables */
@@ -63,6 +58,20 @@ td .list {
   width: calc(100% + 22px);
   margin: -7px -11px;
   font-size: var(--smaller-font-size);
+
+  th,
+  td {
+    min-width: 40px;
+    padding: 3px 8px;
+
+    &:first-child {
+      width: 20%;
+    }
+
+    &:last-child {
+      min-width: 0;
+    }
+  }
 }
 
 .table-small .nested,
@@ -70,22 +79,6 @@ td .list {
   width: calc(100% + 18px);
   margin: -4px -9px;
   font-size: 0.9em;
-}
-
-.nested th,
-.nested td {
-  min-width: 40px;
-  padding: 3px 8px;
-}
-
-.nested th:first-child,
-.nested td:first-child {
-  width: 20%;
-}
-
-.nested th:last-child,
-.nested td:last-child {
-  min-width: 0;
 }
 
 @media (max-width: 767px) {
@@ -102,6 +95,14 @@ td .list {
     align-items: stretch;
     flex-direction: column;
     margin: 15px 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   th,
@@ -109,19 +110,15 @@ td .list {
     border: none;
     padding: 2px 15px;
     padding-right: 0;
-  }
 
-  tr:first-child {
-    margin-top: 0;
-  }
+    &:first-child {
+      font-weight: bold;
+    }
 
-  tr:last-child {
-    margin-bottom: 0;
-  }
-
-  .nested,
-  .nested .nested {
-    margin: 0;
+    &:last-child {
+      min-width: 0;
+      width: auto;
+    }
   }
 
   table thead,
@@ -129,45 +126,38 @@ td .list {
     display: none;
   }
 
-  .nested tr {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: initial;
-  }
+  .nested {
+    margin: 0;
 
-  .nested th,
-  .nested td {
-    flex: 0 1 auto;
-    padding-left: 0;
-    padding-right: 3px;
-  }
+    .nested {
+      margin: 0;
+    }
 
-  .nested th::after,
-  .nested td::after {
-    content: ",";
-  }
+    tr {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      margin: initial;
+    }
 
-  .nested th:first-child::after,
-  .nested td:first-child::after,
-  .nested th:last-child::after,
-  .nested td:last-child::after {
-    content: "";
-  }
+    th,
+    td {
+      flex: 0 1 auto;
+      padding-left: 0;
+      padding-right: 3px;
 
-  .nested th:nth-child(-n + 2),
-  .nested td:nth-child(-n + 2) {
-    padding-left: 10px;
-  }
+      &::after {
+        content: ",";
+      }
 
-  th:first-child,
-  td:first-child {
-    font-weight: bold;
-  }
+      &:first-child::after,
+      &:last-child::after {
+        content: "";
+      }
 
-  th:last-child,
-  td:last-child {
-    min-width: 0;
-    width: auto;
+      &:nth-child(-n + 2) {
+        padding-left: 10px;
+      }
+    }
   }
 }
