--- a/src/server/static/css/components/_header.scss
+++ b/src/server/static/css/components/_header.scss
@@ -12,14 +12,14 @@ header {
   position: absolute;
   top: 20px;
   right: 20px;
-}
 
-.main-nav select {
-  padding: 0.5em 1.5em 0.5em 0.6em;
-  cursor: pointer;
-  opacity: 0.7;
-}
+  select {
+    padding: 0.5em 1.5em 0.5em 0.6em;
+    cursor: pointer;
+    opacity: 0.7;
 
-.main-nav select option[selected]:first-child {
-  display: none;
+    option[selected]:first-child {
+      display: none;
+    }
+  }
 }
