--- a/src/server/static/css/app.scss
+++ b/src/server/static/css/app.scss
@@ -1,6 +1,11 @@
+// Bootstrap 5
+@import "/node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+// Components
 @import "components/_general";
 @import "components/_header";
 @import "components/_tables";
 @import "components/_forms";
 
+// Main stylesheet
 @import "styles";
