--- a/src/server/static/css/app.scss
+++ b/src/server/static/css/app.scss
@@ -1,5 +1,5 @@
 // Bootstrap 5
-@import "/node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 // Components
 @import "components/_general";
