--- a/src/server/static/css/components/_tables.scss
+++ b/src/server/static/css/components/_tables.scss
@@ -23,8 +23,7 @@ td {
   }
 
   &:last-child {
-    min-width: 200px;
-    width: 80%;
+    width: 100%;
   }
 
   .list {
@@ -127,6 +126,8 @@ th {
   }
 
   .nested {
+    width: auto;
+    max-width: 100%;
     margin: 0;
 
     .nested {
