moved 'emptySmallTable' clause into the 'nominees' partial

--- a/src/server/views/partials/nominees.handlebars
+++ b/src/server/views/partials/nominees.handlebars
@@ -1,3 +1,4 @@
+{{#if (len this)}}
 <table class="table-small">
   <thead>
     <tr>
@@ -36,3 +37,6 @@
     {{/each}}
   </tbody>
 </table>
+{{else}}
+    {{> emptySmallTable }}
+{{/if}}
