--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -198,46 +198,12 @@
             {{/if}}
 
             {{#if (len (getter this "requiredBadges"))}}
-            {{> totalsTableHeader header="Required Badges" collection=(getter this "requiredBadges") }}
-            <table class="table-small">
-                <thead>
-                    <tr>
-                        <th>Link</th>
-                        <th>Id</th>
-                        <th>Type</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {{#each (getter this "requiredBadges")}}
-                <tr>
-                    <td><a href="{{getter @root/data/election "siteUrl"}}/help/badges/{{this.badge_id}}">{{this.name}}</a></td>
-                    <td>{{this.badge_id}}</td>
-                    <td>{{this.type}}</td>
-                </tr>
-                {{/each}}
-                </tbody>
-            </table>
+                {{> totalsTableHeader header="Required Badges" collection=(getter this "requiredBadges") }}
+                {{> badgesTable election=@root/data/election key="requiredBadges" }}
             {{/if}}
 
             {{> totalsTableHeader header="Election Badges" collection=(getter this "optionalBadges") }}
-            <table class="table-small">
-                <thead>
-                    <tr>
-                        <th>Link</th>
-                        <th>Id</th>
-                        <th>Type</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {{#each (getter this "optionalBadges")}}
-                <tr>
-                    <td><a href="{{getter @root/data/election "siteUrl"}}/help/badges/{{this.badge_id}}">{{this.name}}</a></td>
-                    <td>{{this.badge_id}}</td>
-                    <td>{{this.type}}</td>
-                </tr>
-                {{/each}}
-                </tbody>
-            </table>
+            {{> badgesTable election=@root/data/election key="optionalBadges" }}
         </aside>
     </section>
     {{/with}}
