--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -49,6 +49,7 @@
                 <tr><td>Election date</td><td>{{> relativetime date=dateElection}}</td></tr>
                 <tr><td>End date</td><td>{{> relativetime date=dateEnded}}</td></tr>
                 <tr><td>Cancelled date</td><td>{{#if dateCancelled}}{{> relativetime date=dateCancelled}}{{/if}}</td></tr>
+                <tr><td>Cancelled text</td><td>{{#if cancelledText}}<pre>{{cancelledText}}</pre>{{/if}}</td></tr>
                 <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
                 <tr><td>Positions</td><td>{{numPositions}}</td></tr>
