Update more bootstrap styles

--- a/src/server/static/css/styles.scss
+++ b/src/server/static/css/styles.scss
@@ -70,3 +70,13 @@
     font-style: normal;
   }
 }
+
+.chat-transcript {
+
+  th,
+  td {
+    &:not(:last-child) {
+      white-space: nowrap;
+    }
+  }
+}
