--- a/src/server/views/partials/navigation.handlebars
+++ b/src/server/views/partials/navigation.handlebars
@@ -1,6 +1,6 @@
 <header>
   <nav class="main-nav">
-    <select id="nav">
+    <select class="form-select" id="nav">
       <option selected="selected">Menu</option>
       {{#each routes}}
       {{#unlessEquals @key ../path}}
