--- a/src/server/views/say.handlebars
+++ b/src/server/views/say.handlebars
@@ -12,8 +12,8 @@
 
     <input type="hidden" name="password" value="{{data/password}}" />
 
-    <div class="form-controls mt20">
-        <button>Send</button>
+    <div class="form-controls mt-4">
+        <button class="btn btn-primary">Send</button>
     </div>
 </form>
 
