--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -1,6 +1,6 @@
 {{> navigation routes=data/routes password=data/password path=data/path }}
 
-<h1>{{{heading}}}</h1>
+<h1 class="fs-4">{{{heading}}}</h1>
 
 {{#with data}}
 
