--- a/src/server/views/say.handlebars
+++ b/src/server/views/say.handlebars
@@ -1,6 +1,6 @@
 {{> navigation routes=data/routes password=data/password path=data/path }}
 
-<h1>{{{heading}}}</h1>
+<h1 class="fs-4">{{{heading}}}</h1>
 
 {{> breadcrumbs current=current }}
 
@@ -18,7 +18,7 @@
 </form>
 
 <div class="chat-transcript">
-    <h3>Recent Chat Messages</h3>
+    <h3 class="fs-5">Recent Chat Messages</h3>
     <table class="table-small">
         <thead>
             <tr>
