Replace more header classes

--- a/src/server/views/health.handlebars
+++ b/src/server/views/health.handlebars
@@ -2,7 +2,7 @@
 
 <main class="dashboard">
     <section>
-        <h2>Clients</h2>
+        <h2 class="fs-4">Clients</h2>
         <table class="table-small">
             <thead>
                 <tr>
