--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -7,12 +7,12 @@
 <main class="dashboard row">
     <section class="col-auto">
         <aside>
-            <h2>Configuration</h2>
+            <h2 class="fs-4">Configuration</h2>
             {{> deep data/configuration top=true}}
         </aside>
 
         <aside>
-            <h2>Versions</h2>
+            <h2 class="fs-4">Versions</h2>
             <table class="table-small">
                 <tbody>
                     {{#each data/versions}}
@@ -28,7 +28,7 @@
 
     <section class="col-auto">
         <aside>
-            <h2>Routes</h2>
+            <h2 class="fs-4">Routes</h2>
             <table class="table-small">
                 <thead>
                     <tr>
