--- a/src/server/views/partials/navigation.handlebars
+++ b/src/server/views/partials/navigation.handlebars
@@ -1,16 +1,24 @@
 <header>
   <nav class="main-nav">
     <select class="form-select" id="nav">
-      <option selected="selected">Menu</option>
-      {{#each routes}}
-      {{#unlessEquals @key ../path}}
-        {{#if (either this.public ../password)}}
-        <option value="{{@key}}{{#if ../password}}?password={{../password}}{{/if}}">
-          {{initIfFalsy (unprefix "/" @key) "home"}}
-        </option>
-        {{/if}}
-      {{/unlessEquals}}
-      {{/each}}
+        <optgroup label="Menu">
+        {{#each routes}}
+        {{#unlessEquals @key ../path}}
+            {{#if (either this.public ../password)}}
+            <option value="{{@key}}{{#if ../password}}?password={{../password}}{{/if}}">
+            {{initIfFalsy (unprefix "/" @key) "home"}}
+            </option>
+            {{/if}}
+        {{/unlessEquals}}
+        {{/each}}
+        </optgroup>
+        <optgroup label="Instances">
+            <option value="https://electionbot1.samliew.com"></option>
+            <option value="https://electionbot2.samliew.com"></option>
+            <option value="https://electionbot3.samliew.com"></option>
+            <option value="https://electionbot4.samliew.com"></option>
+            <option value="https://electionbot5.samliew.com"></option>
+        </optgroup>
     </select>
   </nav>
 </header>
