made Heroku bot instance links in nav dynamic

--- a/src/server/views/health.handlebars
+++ b/src/server/views/health.handlebars
@@ -1,4 +1,4 @@
-{{> navigation routes=data/routes password=data/password path=data/path }}
+{{> navigation routes=data/routes password=data/password path=data/path instances=data/instances }}
 
 <main class="dashboard">
     <section>
