--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -1,4 +1,4 @@
-{{> navigation routes=data/routes password=data/password path=data/path }}
+{{> navigation routes=data/routes password=data/password path=data/path instances=data/instances }}
 
 <h1 class="fs-4">{{{heading}}}</h1>
 
